test/files/neg/bug3909.check
bug3909.scala:1: error: in object DO, multiple overloaded alternatives of m1 define default arguments
object DO {
       ^
one error found
